@@ -43,7 +43,7 @@
 .\"
 .\"
 .\" Changes by Gunnar Ritter, Freiburg i. Br., Germany, February 2006.
-.\" Sccsid @(#)doc.tr	1.108 (gritter) 8/9/06
+.\" Sccsid @(#)doc.tr	1.109 (gritter) 8/9/06
 .\"
 .\" from file m.mac
 .do xflag 3
@@ -1878,7 +1878,7 @@ Reference	Name	Description
 \(en	\fBmo\fR	Current month (1\(en12).
 \T'n_nl'4.1\T	\T'n_nl'\fBnl\fR\T	\T'n_nl'Vertical position of last printed text base-line.\T
 \T'n_rsb'11.2\T	\T'n_rsb'\fBrsb\fR\T	\T'n_rsb'Visual depth of string below base line (generated by \fIwidth\fR function).\T
-\T'n_rst'11.2\T	\T'n_rst'\fBrst\fR\T	\T'n_rst'Visual depth of string above base line (generated by \fIwidth\fR function).\T
+\T'n_rst'11.2\T	\T'n_rst'\fBrst\fR\T	\T'n_rst'Visual height of string above base line (generated by \fIwidth\fR function).\T
 \T'n_sb'11.2\T	\T'n_sb'\fBsb\fR\T	\T'n_sb'Depth of string below base line (generated by \fIwidth\fR function).\T
 \(en	\fBseconds\fR	Seconds portion of current local time (0\(en60).
 \T'n_st'11.2\T	\T'n_st'\fBst\fR\T	\T'n_st'Height of string above base line (generated by \fIwidth\fR function).\T
@@ -1912,8 +1912,10 @@ using \fB\ex\fI\'N\'\fR.\T
 \T'n_.b'2.3\T	\T'n_.b'\fB&b\fR\T	\T'n_.b'Emboldening level.\T
 \T'n_.breakchar'13\T	\T'n_.breakchar'\fB&breakchar\fR\T	\T'n_.breakchar'Current optional line break characters.\T
 \(en	\fB&c\fR	Number of \fIlines\fR read from current input file.
-\T'n_.d'7.4\T	\T'n_.d'\fB&d\fR\T	\T'n_.d'Current vertical place in current diversion; equal to \fBnl\fR, if no diversion.\T
+\T'n_.cdp'11.2\T	\T'n_.cdp'\fB&cdp\fR\T	\T'n_.cdp'Visual depth below base line of previous character.\T
 \T'n_.ce'4\T	\T'n_.ce'\fB&ce\fR\T	\T'n_.ce'Remaining number of lines to be centered.\T
+\T'n_.cht'11.2\T	\T'n_.cht'\fB&cht\fR\T	\T'n_.cht'Visual height above base line of previous character.\T
+\T'n_.d'7.4\T	\T'n_.d'\fB&d\fR\T	\T'n_.d'Current vertical place in current diversion; equal to \fBnl\fR, if no diversion.\T
 \T'n_.descender'5.4\T	\T'n_.descender'\fB&descender\fR\T	\T'n_.descender'Descender of current font and point size.\T
 \T'n_.ev'17\T	\T'n_.ev'\fB&ev\fR\T	\T'n_.ev'Name of current environment [sic].\T
 \T'n_.f'2.2\T	\T'n_.f'\fB&f\fR\T	\T'n_.f'Current font as physical quadrant (1-255).\T
@@ -4421,9 +4423,12 @@ case characters without descenders (like \fBe\fR);
 and 3 means that both tall characters and characters with
 descenders are present.
 .pg
-The \A'n_.w'\fB.w\fR number register contains
+The \A'n_.w'\fB&w\fR number register contains
 the width of the previous character
 independently of the width function.
+Similarly, the \A'n_.cht'\fB&cht\fR and \A'n_.cdp'\fB&cdp\fR registers
+are set respectively to the highest and lowest visual extent
+of the previous character relative to the baseline.
 .sc
 Mark horizontal place.
 The escape sequence \A'e_k'\fB\ek\fIx\fR will cause the \fIcurrent\fR horizontal
@@ -5167,7 +5172,7 @@ but processing continues.
 .TS
 box center;
 rfB | lfB | lfB
-n | lfB | lw(3.5i).
+n | lfB | lw(4.0i).
 Bit	Name	Description
 _
 0	none	No warnings at all.
